Updated section styles to rework the about me section. Still a little more to do, but the bulk of it is done. Fixed a minor issue with the spacing of the dark/light toggle

--- a/app/components/home/HomeSection.module.css
+++ b/app/components/home/HomeSection.module.css
@@ -1,14 +1,7 @@
 .homeSection {
-    min-height: calc(100vh - var(--header-height) - var(--footer-height));
-    display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    background-color: var(--color-background-secondary);
-    color: var(--color-text-primary);
-    transition: background-color var(--transition-speed-normal) var(--transition-easing-default),
-    color var(--transition-speed-normal) var(--transition-easing-default);
-    scroll-margin-top: calc(var(--header-height) + var(--spacing-md));
 }
 
 .homeContent {
