--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,5 @@
 .mainContentArea {
-    max-width: 80%;
-    background-color: var(--color-background-secondary);
+    max-width: 85%;
     color: var(--color-text-primary);
     margin: calc(var(--header-height) + var(--spacing-md)) auto calc(var(--footer-height) + var(--spacing-md));
     min-height: calc(100vh - var(--header-height) - var(--footer-height));
