--- a/app/variables.css
+++ b/app/variables.css
@@ -7,7 +7,7 @@
     --color-text-secondary: #495057;
     --color-text-subtle: #C0C0C0;
     --color-border-default: #DEE2E6;
-    --color-shadow-default: rgba(0, 0, 0, 0.1);
+    --color-shadow-default: rgba(0, 0, 0, 0.15);
     --color-background-secondary: #F8F9FA;
 
     --font-family-name: "Monotype Corsiva", cursive;
@@ -21,6 +21,8 @@
     --spacing-md: 1rem;
     --spacing-lg: 1.5rem;
     --spacing-xl: 1.75rem;
+
+    --margin-bottom-sections: 20px;
 
     /* Border Radius */
     --border-radius-sm: 4px;
@@ -47,8 +49,7 @@ body.dark-mode {
     --color-text-secondary: #A0AEC0;
     --color-text-subtle: #718096;
     --color-border-default: #4A5568;
-    --color-background-secondary: #2D3748;
-    --color-background-secondary: rgba(0, 0, 0, 0.3);
+    --color-background-secondary: #11161B;
     --color-background-hamburger-line: #48BB78;
     --color-background-mobile-nav: rgba(44, 123, 71, .90);
     --color-text-mobile-nav: #C0C0C0;
